tests/ui/ferrocene/compiler-arguments/upper_c_codegen-units/upper_c_codegen-units_space-eq-empty.rs
//@ check-fail
//@ compile-flags: -C codegen-units=
//~? ERROR incorrect value

fn main() {}

// ferrocene-annotations: um_rustc_C_codegen_units
